<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/customSliders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/customSliders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/inputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">

        <!-- Sliders for Custom Preset -->
        <TextView android:id="@+id/pitchLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/placeholder_pitch"/>
        <SeekBar android:id="@+id/pitchSeekBar" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="255"/>
        <TextView android:id="@+id/speedLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/placeholder_speed"/>
        <SeekBar android:id="@+id/speedSeekBar" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="255"/>
        <TextView android:id="@+id/mouthLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/placeholder_mouth"/>
        <SeekBar android:id="@+id/mouthSeekBar" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="255"/>
        <TextView android:id="@+id/throatLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/placeholder_throat"/>
        <SeekBar android:id="@+id/throatSeekBar" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="255"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/textInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="none"
            android:hint="@string/placeholder_type_or_speak"
            android:inputType="text"/>

        <ImageButton
            android:id="@+id/micButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/placeholder_record"
            android:layout_marginStart="8dp"/>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_send"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>